@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,8 @@
 
 /* @test
  * @summary Test JNI IsVirtualThread
- * @run main/native IsVirtualThread
+ * @compile --enable-preview -source ${jdk.version} IsVirtualThread.java
+ * @run main/native/othervm --enable-preview IsVirtualThread
  */
 
 import java.util.concurrent.locks.LockSupport;
