@@ -24,17 +24,20 @@
 /**
  * @test
  * @requires vm.debug != true
- * @run main/othervm PinALot
+ * @compile --enable-preview -source ${jdk.version} PinALot.java
+ * @run main/othervm --enable-preview PinALot
  * @summary Stress test timed park when pinned
  */
 
 /**
  * @test
  * @requires vm.debug == true
- * @run main/othervm/timeout=300 PinALot 200000
+ * @compile --enable-preview -source ${jdk.version} PinALot.java
+ * @run main/othervm/timeout=300 --enable-preview PinALot 200000
  */
 
 import java.time.Duration;
+import java.time.Instant;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.locks.LockSupport;
 
@@ -61,8 +64,8 @@ public class PinALot {
 
         boolean terminated;
         do {
-            terminated = thread.join(Duration.ofMillis(500));
-            System.out.println(count.get());
+            terminated = thread.join(Duration.ofSeconds(1));
+            System.out.println(Instant.now() + " => " + count.get());
         } while (!terminated);
 
         int countValue = count.get();
